ci: add workflows for docs, release and issue templates
- Add docs.yml for MkDocs deployment to GitHub Pages
- Update release.yml with cross-platform builds
- Add dependabot.yml for automated dependency updates
- Add FUNDING.yml for GitHub Sponsors
- Add issue templates for bugs and questions

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -89,6 +89,17 @@ jobs:
       contents: write
     steps:
       - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - name: Generate changelog
+        uses: orhun/git-cliff-action@v3
+        id: git-cliff
+        with:
+          config: cliff.toml
+          args: --latest --strip header
+        env:
+          OUTPUT: CHANGELOG.md
 
       - name: Download all artifacts
         uses: actions/download-artifact@v4
@@ -112,7 +123,7 @@ jobs:
         with:
           draft: false
           prerelease: ${{ contains(github.ref, 'alpha') || contains(github.ref, 'beta') || contains(github.ref, 'rc') }}
-          generate_release_notes: true
+          body: ${{ steps.git-cliff.outputs.content }}
           files: |
             artifacts/**/*.tar.gz
             artifacts/**/*.zip
