--- a/crates/xlex-core/Cargo.toml
+++ b/crates/xlex-core/Cargo.toml
@@ -24,3 +24,8 @@ handlebars = { workspace = true }
 
 [dev-dependencies]
 tempfile = { workspace = true }
+criterion = { workspace = true }
+
+[[bench]]
+name = "benchmarks"
+harness = false
