--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ categories = ["command-line-utilities", "parser-implementations"]
 # Core dependencies
 zip = "2.1"
 quick-xml = "0.36"
+time = ">=0.3.20, <0.3.37"  # Pin to avoid edition2024 requirement (MSRV 1.75)
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 serde_yaml = "0.9"
