fix: downgrade handlebars to 5.1 for MSRV 1.75 compatibility
- handlebars 6.0+ requires pest 2.8+ which needs Rust 1.83
- Also pin zip, time, indexmap to MSRV-compatible versions

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -46,7 +46,7 @@ chrono = { version = "0.4", features = ["serde"] }
 uuid = { version = "1.0", features = ["v4"] }
 regex = "1.10"
 regex-lite = "0.1"
-handlebars = "6.0"
+handlebars = "5.1"  # 6.0+ requires pest 2.8+ which needs Rust 1.83
 csv = "1.3"
 dirs = "5.0"
 
