feat: add npm package support and update README
- Add npm/xlex package with postinstall binary download
- Update README with npm/npx installation instructions
- Update install.sh with correct repo URL
- Add NPM_TOKEN secret for npm publishing
- Simplify release workflow for npm publishing

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -147,6 +147,40 @@ jobs:
         run: cargo publish -p xlex-cli
         env:
           CARGO_REGISTRY_TOKEN: ${{ secrets.CARGO_REGISTRY_TOKEN }}
+        continue-on-error: true
+
+  npm-publish:
+    name: Publish to npm
+    needs: release
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      id-token: write  # Required for Trusted Publishing
+    steps:
+      - uses: actions/checkout@v4
+
+      - uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+          registry-url: 'https://registry.npmjs.org'
+
+      - name: Get version
+        id: version
+        run: echo "version=${GITHUB_REF#refs/tags/v}" >> $GITHUB_OUTPUT
+
+      - name: Update package version
+        run: |
+          VERSION=${{ steps.version.outputs.version }}
+          cd npm/xlex
+          jq --arg v "$VERSION" '.version = $v' package.json > tmp.json && mv tmp.json package.json
+          cat package.json
+
+      - name: Publish to npm
+        run: |
+          cd npm/xlex
+          npm publish --access public
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
 
   homebrew:
     name: Update Homebrew
