perf(core): add lazy loading and mmap for large xlsx files
Implement major performance optimizations for handling large xlsx files:

- Add LazySharedStrings with byte offset indexing and LRU cache
- Add WorkbookReader with memory-mapped I/O for files >10MB
- Add LazyWorkbook for metadata-only opening (sub-second for any size)
- Add parallel sheet parsing with rayon (optional 'parallel' feature)
- Add streaming API: stream_rows() and read_cell()

Performance: 366MB file loads in 0.23s (LazyWorkbook) vs 86s (full load)

--- a/crates/xlex-core/Cargo.toml
+++ b/crates/xlex-core/Cargo.toml
@@ -10,6 +10,10 @@ readme = "README.md"
 keywords = ["excel", "xlsx", "spreadsheet", "parser"]
 categories = ["parser-implementations", "data-structures"]
 
+[features]
+default = ["parallel"]
+parallel = ["rayon"]
+
 [dependencies]
 zip = { workspace = true }
 quick-xml = { workspace = true }
@@ -21,6 +25,8 @@ chrono = { workspace = true }
 uuid = { workspace = true }
 regex = { workspace = true }
 handlebars = { workspace = true }
+memmap2 = { workspace = true }
+rayon = { workspace = true, optional = true }
 
 [dev-dependencies]
 tempfile = { workspace = true }
