--- a/Cargo.toml
+++ b/Cargo.toml
@@ -49,6 +49,8 @@ regex-lite = "0.1"
 handlebars = "4.5"  # 5.0+ requires pest 2.8+ which needs Rust 1.83
 csv = "1.3"
 dirs = "5.0"
+memmap2 = "0.9"
+rayon = "1.10"
 
 # Testing
 tempfile = "3.10"
