--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,7 +20,7 @@ categories = ["command-line-utilities", "parser-implementations"]
 
 [workspace.dependencies]
 # Core dependencies
-zip = ">=2.1, <2.2"  # Pin to avoid time 0.3.37+ which requires edition2024 (MSRV 1.80)
+zip = "2.2"  # Updated for MSRV 1.80 compatibility
 quick-xml = "0.36"
 time = ">=0.3.20, <0.3.37"  # Pin to avoid edition2024 requirement (MSRV 1.80)
 serde = { version = "1.0", features = ["derive"] }
