--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -102,4 +102,4 @@ jobs:
       - uses: dtolnay/rust-toolchain@1.80.0
       - uses: Swatinem/rust-cache@v2
       - name: Check MSRV
-        run: cargo check --all-features --workspace
+        run: cargo check --locked --all-features --workspace
