fix(msrv): pin dependencies for Rust 1.80 compatibility
- crc: 3.2 (3.4+ requires Rust 1.83)
- indexmap: 2.2 (2.13+ requires Rust 1.82)
- pest suite: 2.7 (2.8+ requires Rust 1.83)
- zip: 2.2.0 (stable with MSRV 1.80)

Also added MSRV guards in Cargo.toml workspace.dependencies to
prevent accidental upgrades beyond compatible versions.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,12 @@ categories = ["command-line-utilities", "parser-implementations"]
 zip = "2.2"  # Updated for MSRV 1.80 compatibility
 quick-xml = "0.36"
 time = ">=0.3.20, <0.3.37"  # Pin to avoid edition2024 requirement (MSRV 1.80)
+crc = "3.2"  # MSRV guard: newer releases require Rust 1.83+
+indexmap = "2.2"  # MSRV guard: 2.13+ requires Rust 1.82+
+pest = "2.7"  # MSRV guard: 2.8+ requires Rust 1.83+
+pest_derive = "2.7"
+pest_generator = "2.7"
+pest_meta = "2.7"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 serde_yaml = "0.9"
