chore(lint): add clippy lints and expand clippy.toml config
- Add clippy::all warning to xlex-core lib.rs
- Add msrv, too-many-arguments-threshold, type-complexity-threshold
  to clippy.toml for better lint coverage

--- a/clippy.toml
+++ b/clippy.toml
@@ -1,3 +1,6 @@
 # Clippy configuration
+msrv = "1.80"
 disallowed-names = ["foo", "bar", "baz", "quux"]
 cognitive-complexity-threshold = 25
+too-many-arguments-threshold = 8
+type-complexity-threshold = 300
