chore: exclude prompts and skills from version control
These are local-only Claude/Copilot configuration files that should
not be pushed to the repository. Add to .gitignore and remove from
tracked files.

--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,9 @@ cobertura.xml
 .env.local*.xlsx
 
 *.xlsx
+# GitHub Copilot/Claude prompts and skills (local only)
+.github/prompts/
+.github/skills/
+
+# Claude local config
+.claude/
