feat(mcp): add MCP server for AI-driven Excel manipulation
Add new `xlex-mcp` crate that exposes xlex-core capabilities as an MCP
(Model Context Protocol) server, enabling AI assistants like Claude to
read, write, and manipulate .xlsx files through a session-based API.

Key features:
- 16 MCP tools across 5 domains: workbook, sheet, cell, row, export
- Session-based workbook management with Arc<Mutex<HashMap>> store
- stdio transport via rmcp (official Rust MCP SDK)
- Structured JSON responses with error codes and recovery suggestions
- Support for multiple concurrent workbook sessions

Tools implemented:
- Workbook: open, close, info, create, save
- Sheet: list, add, remove, rename
- Cell: read (single/range/list), write (batch), clear
- Row: read (with pagination), insert, delete
- Export: CSV, JSON, Markdown formats

Also includes:
- Comprehensive integration test suite (977 lines)
- OpenSpec design docs, proposal, specs, and task tracking
- README with configuration examples for Claude Desktop/Code
- Updated root README with MCP server section
- CI release workflow updated for xlex-mcp binary

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -63,14 +63,14 @@ jobs:
         if: runner.os != 'Windows'
         run: |
           cd target/${{ matrix.target }}/release
-          tar czf ../../../${{ matrix.name }}.tar.gz xlex
+          tar czf ../../../${{ matrix.name }}.tar.gz xlex xlex-mcp
           cd ../../..
 
       - name: Package (Windows)
         if: runner.os == 'Windows'
         run: |
           cd target/${{ matrix.target }}/release
-          7z a ../../../${{ matrix.name }}.zip xlex.exe
+          7z a ../../../${{ matrix.name }}.zip xlex.exe xlex-mcp.exe
           cd ../../..
 
       - name: Upload artifact
